--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ amplify = "4.7.0"
 bp-core = "0.11.0-beta.8"
 bp-std = "0.11.0-beta.8"
 commit_verify = "0.11.0-beta.8"
+
+rand = "0.8.5"
+rand_chacha = "0.3"
 # serde_yaml = "0.9.19"
 
 # move to dev dep
