--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 rgb-std = { version = "=0.11.0-beta.8", features = ["fs"]}
 rgb-schemata = "=0.11.0-beta.8"
 rgb-interfaces = "=0.11.0-beta.8"
+esplora-client = "0.10.0"
+bitcoin = "0.32.2"
 
 strict_types = { version = "2.7.0", features = ["serde"] }
 strict_encoding = "2.7.0"
