--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 rgb-std = { version = "=0.11.0-beta.8", features = ["fs"]}
 rgb-schemata = "=0.11.0-beta.8"
 rgb-interfaces = "=0.11.0-beta.8"
-esplora-client = "0.10.0"
+esplora-client = { version = "0.10.0", features = ["blocking-https-rustls"] }
 bitcoin = "0.32.2"
 
 strict_types = { version = "2.7.0", features = ["serde"] }
